--- a/ClientManager/ClientManager/Forms/MenuForm.resx
+++ b/ClientManager/ClientManager/Forms/MenuForm.resx
@@ -2076,4 +2076,7 @@
         AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAgAEAAIABAADAAwAA8A8AAA==
 </value>
   </data>
+  <metadata name="timerCount.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>123, 17</value>
+  </metadata>
 </root>
